# document-intelligence-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  llm.py  main.py  routes.py  schemas.py
app/agent/: orchestrator.py  prompts.py  tools.py
app/db/: models.py  session.py
app/evals/: dataset.json  judge.py  judge_prompts.py  runner.py
app/ingestion/: chunking.py  parsers.py  pipeline.py
app/integrations/: monday.py  slack.py
app/retrieval/: embeddings.py  pipeline.py  rerank.py
app/services/: approval_service.py
tests/: conftest.py  test_chunking.py  test_compare_schema.py  test_evals_smoke.py  test_guardrails.py  test_llm_citations.py  test_post_actions.py  test_retrieval_scoring.py  test_schemas.py
