[project]
name = "document-intelligence-agent"
version = "0.1.0"
description = "Document-centric AI agent with tool-based RAG, pgvector retrieval, Cohere reranking, and structured responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.4",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "langchain>=1.1.0",
  "langchain-openai>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langsmith>=0.3.0",
  "cohere>=5.0.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.2",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
